
[package]
name = "Tor_Traffic_Router"
version = "0.1.1" 
authors = ["Bader Alotaibi baderalotaibi3@gmail.com"] 
edition = "2021" 
description = "A Rust crate to install, manage, and utilize Tor for privacy-enhanced requests."
license = "MIT" 
repository = "https://github.com/BDR-Pro/TorTrafficRouter"
keywords = ["tor", "privacy", "networking"]
categories = ["network-programming", "web-programming", "cryptography"]


[dependencies]
reqwest = { version = "0.11", features = ["socks"] }
sysinfo = "0.30.5"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3", features = ["shellapi"] }


